[SCB-2782] Use log4j2 instead of log4j1 in master branch (#3660)